# nchoputa

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GNUmakefile  README.md  build.rs  build.sh
.github/workflows/: docker.yml
data/sealevel/: Climate_dot_gov_dashboard_SeaLevel_Jan2021update.txt  README.md  csiro.tsv  uhslc.tsv
lib/: Cargo.toml
lib/src/render/: render_trait.rs
shared/: Cargo.toml
shared/src/: response.rs
src/: graphs.rs  main.rs
static/: index.html
viewer/: Cargo.toml
viewer/.cargo/: config.toml
viewer/src/: app.rs  canvas.rs  lib.rs  render.rs  store.rs
viewer/src/app/: mod.rs
viewer/src/render/: framebuffer.rs  mod.rs
viewer/src/shader/: mod.rs  solid-white-vertex.glsl
