[package]
name = "nchoputa"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
actix-files = "*"
actix-web = "*"
chrono = { version = "*", features = [ "serde" ] }
csv = "*"
serde = "*"
tracing = "*"
tracing-subscriber = "*"

[dependencies.postcard]
version = "1"
features = ["alloc"]

# FIXME: This does not install the binaries, see:
# https://github.com/rust-lang/rfcs/blob/master/text/3028-cargo-binary-dependencies.md
#[build-dependencies]
#wasm-bindgen-cli = "*"
