[package]
name = "viewer"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_egui = "0.16"
chrono = { version = "*", features = [ "serde" ] }
console_error_panic_hook = "*"
ehttp = "0.2.0"
postcard = "1"
shared = { path = "../shared" }
serde = "*"
tracing = "*"
tracing-wasm = "*"
wasm-bindgen = "*"
web-sys = "*"
winit = "*"

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["bevy_winit", "bevy_asset", "bevy_gltf", "render", "png"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = "z"
