[package]
name = "viewer"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_egui = "*"
chrono = { version = "*", features = [ "serde" ] }
console_error_panic_hook = "*"
ehttp = "0.2.0"
postcard = "1"
shared = { path = "../shared" }
serde = "*"
tracing = "*"
tracing-wasm = "*"
wasm-bindgen = "*"
web-sys = "*"
winit = "*"

[dependencies.bevy]
version = "*"
# default-features = false
# features = ["bevy_asset", "bevy_core_pipeline", "bevy_winit", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "png"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = "z"
