[package]
name = "viewer"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "*", features = [ "serde" ] }
console_error_panic_hook = "*"
ehttp = "0.2.0"
postcard = "1"
serde = "*"
shared = { path = "../shared" }
tracing = "*"
tracing-subscriber = "*"
tracing-wasm = "*"
tracing-web = "*"
wasm-bindgen = "*"
web-sys = "*"
winit = "*"

[dependencies.bevy_egui]
version = "0.33"
default-features = false
features = ["render", "default_fonts"]

[dependencies.bevy]
version = "0.15.3"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = "z"
